--- a/src/styles/OrdersPage.css
+++ b/src/styles/OrdersPage.css
@@ -1,5 +1,5 @@
 .orders-page h1 {
-  font-size: 1.8rem;
+  font-size: 1.7rem;
   margin-bottom: 25px;
   color: var(--primary-color);
 }
@@ -46,6 +46,7 @@
   border-radius: 8px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
   overflow: hidden;
+  border: 1px solid var(--border-color);
 }
 
 .order-header {
@@ -58,7 +59,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 10px;
+  margin-bottom: 2px;
 }
 
 .order-meta {
@@ -66,9 +67,13 @@
   flex-direction: column;
   gap: 5px;
 }
-
-.order-date, .order-number {
-  font-size: 0.9rem;
+.order-number{
+  font-size: 1.6rem;
+  font-weight: 700;
+  color: black;
+}
+.order-date {
+  font-size: 1.3rem;
   color: var(--text-light);
 }
 
@@ -76,7 +81,7 @@
   font-weight: 600;
   padding: 5px 10px;
   border-radius: 4px;
-  font-size: 0.9rem;
+  font-size: 1.3rem;
 }
 
 .order-status.delivered {
@@ -99,8 +104,8 @@
   color: white;
 }
 
-.order-shipping {
-  font-size: 0.9rem;
+.order-ship-to {
+  font-size: 1.3rem;
   color: var(--text-light);
 }
 
@@ -111,14 +116,13 @@
 .order-product {
   display: flex;
   padding: 15px 0;
-  border-bottom: 1px solid var(--border-color);
 }
-
-.order-product:last-child {
-  border-bottom: none;
+@media screen and (max-width: 630px) {
+  .order-product{
+    flex-wrap: wrap;
+  }
 }
-
-.product-image {
+.order-product-image {
   width: 80px;
   height: 80px;
   margin-right: 15px;
@@ -126,56 +130,70 @@
   overflow: hidden;
 }
 
-.product-image img {
+.order-product-image img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-.product-details {
+.order-product-details {
   flex: 1;
 }
 
-.product-name {
-  font-size: 1rem;
+.order-product-name {
+  font-size: 1.4rem;
   margin-bottom: 5px;
 }
 
-.product-variation {
-  font-size: 0.9rem;
+.order-product-variation {
+  font-size: 1.3rem;
   color: var(--text-light);
   margin-bottom: 10px;
 }
 
-.product-price-qty {
+.order-product-price-qty {
   display: flex;
   align-items: center;
   gap: 15px;
 }
 
-.product-price {
+.order-product-price {
   font-weight: 600;
+  font-size: 1.5rem;
 }
 
-.product-quantity {
+.order-product-quantity {
   color: var(--text-light);
-  font-size: 0.9rem;
+  font-size: 1.5rem;
 }
 
-.product-actions {
+.order-product-actions {
   margin-left: 20px;
   display: flex;
   align-items: center;
 }
-
-.write-review-btn {
-  color: var(--primary-color);
-  font-size: 0.9rem;
-  font-weight: 600;
+@media screen and (max-width: 630px) {
+.order-product-actions{
+    width: 100%;
+    margin-left: 0;
+    margin-top: .8rem;
+  }
 }
 
-.write-review-btn:hover {
-  text-decoration: underline;
+.review-product-btn {
+  padding: 0;
+  color: var(--primary-color);
+  font-size: 1.3rem;
+  font-weight: 600;
+  background-color: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+}
+
+.review-product-btn:hover {
+  color: var(--primary-dark);
 }
 
 .order-footer {
@@ -183,7 +201,6 @@
   background-color: var(--background-light);
   border-top: 1px solid var(--border-color);
   display: flex;
-  justify-content: space-between;
   align-items: center;
 }
 
@@ -228,10 +245,6 @@
     gap: 10px;
   }
   
-  .order-product {
-    flex-direction: column;
-  }
-  
   .product-image {
     margin-bottom: 10px;
   }
@@ -241,8 +254,88 @@
     margin-top: 10px;
   }
   
-  .order-footer {
+}
+.rate-and-review-form-title {
+  padding: 0.4rem 1rem;
+  font-size: 1.7rem;
+  text-transform: capitalize;
+  font-weight: 700;
+  color: var(--primary-color);
+}
+.rate-and-review-form-body {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1rem;
+}
+.rate-container-title {
+  padding: 0.8rem 1rem;
+  font-size: 1.4rem;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+.rate-container-card {
+  display: flex;
+  padding: 0.8rem;
+  gap: 1rem;
+}
+@media screen and (max-width: 43.75em) {
+  .rate-container-card {
     flex-direction: column;
-    gap: 15px;
   }
+}
+.rate-container-card-col1 {
+  width: 10rem;
+  height: 10rem;
+}
+
+.rate-container-card-img {
+  width: 100%;
+  height: 100%;
+}
+.rate-container-card-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.rate-container-card-col2 svg {
+  font-size: 2.4rem;
+}
+.rate-container-card-product-headline {
+  font-size: 1.4rem;
+}
+.review-container-title {
+  padding: 0.8rem 1rem;
+  font-size: 1.4rem;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+.review-container-body {
+  padding: 1.5rem 0.8rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+.text-field-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1rem;
+}
+@media screen and (max-width: 43.75em) {
+  .text-field-container {
+    grid-template-columns: 1fr;
+  }
+}
+.text-area-container {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+.submit-review-btn {
+  background-color: var(--primary-color);
+  color: white;
+  border: none;
+  padding-block: 1rem;
+  cursor: pointer;
+  font-size: 1.6rem;
+  text-transform: capitalize;
 }
