--- a/src/styles/CartPage.css
+++ b/src/styles/CartPage.css
@@ -69,11 +69,11 @@
 
 .cart-item {
   display: grid;
-  grid-template-columns: 1fr 1.5fr 1fr 0.8fr;
-  gap: 20px;
+  grid-template-columns: 1fr 2.5fr 1fr 0.8fr;
+  gap: 5px;
   padding: 20px;
   border-bottom: 1px solid var(--border-color);
-  align-items: center;
+  align-items: flex-start;
 }
 
 .cart-item:last-child {
@@ -86,12 +86,13 @@
   border-radius: 8px;
   overflow: hidden;
   position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
 }
 
 .item-image img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+  height: 90px;
 }
 
 .out-of-stock-label {
@@ -107,7 +108,9 @@
   justify-content: center;
   font-weight: 600;
 }
-
+/* .cart-item-details{
+  background-color: lightcoral;
+} */
 .cart-item-name {
   font-size: 1.6rem;
   font-weight: 600;
