--- a/src/styles/ProductDetailPage.css
+++ b/src/styles/ProductDetailPage.css
@@ -54,6 +54,13 @@
 .product-container-col1-img {
   width: 35rem;
   height: 35rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.product-container-col1-img img{
+  width: 150px;
+  max-height: 35rem;
 }
 @media screen and (max-width: 70em) {
   .product-container-col1-img {
@@ -66,14 +73,10 @@
     height: 100%;
   }
 }
-.product-container-col1-img img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
 .product-container-col2 {
   padding-block: 2rem;
   padding-inline: 1rem;
+  flex: 1;
 }
 @media screen and (max-width: 70em) {
   .product-container-col2 {
@@ -174,7 +177,6 @@
 .product-page-product-details-title,
 .product-page-product-specifications-title,
 .product-page-wrapper-col2-title,
-.product-page-similar-items-title,
 .customer-feedback-title {
   padding: 1rem;
   border-bottom: 1px solid var(--border-color);
@@ -182,17 +184,17 @@
   text-transform: capitalize;
   font-weight: 600;
 }
-.similar-products-swiper .swiper-button-next,
-.similar-products-swiper .swiper-button-prev {
-  color: white;
-  background: rgba(0, 0, 0, 0.5);
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
+.no-reviews{
+  min-height: 20rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 1rem;
 }
-.similar-products-swiper .swiper-button-next::after,
-.similar-products-swiper .swiper-button-prev::after {
-  font-size: 20px;
+.no-reviews svg{
+  font-size: 5rem;
+  color: var(--border-color);
 }
 .product-page-product-details-body {
   padding: 1rem;
@@ -214,7 +216,7 @@
 .key-features-title,
 .whats-in-the-box-title {
   padding: 0.8rem;
-  border-bottom: 1px solid var(--light-gray-variant1);
+  border-bottom: 1px solid var(--border-color);
   font-size: 1.8rem;
   text-transform: capitalize;
   font-weight: 500;
@@ -230,7 +232,7 @@
   gap: 1rem;
 }
 @media screen and (max-width: 37.5em) {
-  .customer-feedback-body{
+  .customer-feedback-body {
     flex-direction: column;
   }
 }
@@ -241,7 +243,7 @@
   gap: 1rem;
 }
 @media screen and (max-width: 37.5em) {
-  .customer-feedback-col1{
+  .customer-feedback-col1 {
     width: 100%;
   }
 }
@@ -278,7 +280,7 @@
   gap: 1rem;
 }
 @media screen and (max-width: 37.5em) {
-  .customer-feedback-col2{
+  .customer-feedback-col2 {
     width: 100%;
   }
 }
@@ -309,7 +311,7 @@
   font-size: 1.4rem;
 }
 @media screen and (max-width: 25em) {
-  .product-review-card-bottom{
+  .product-review-card-bottom {
     font-size: 1.3rem;
   }
 }
@@ -327,49 +329,13 @@
 .product-page-similar-items {
   background-color: var(--white-color);
 }
-.products-page-similar-items-card {
-  cursor: pointer;
-  padding: 0.8rem;
-  transition: transform 0.2s ease, box-shadow 0.2s ease;
-}
-.products-page-similar-items-card:hover {
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);
-}
-.products-page-similar-items-card-img-wrapper {
-  width: 100%;
-  margin-bottom: 1rem;
-  display: flex;
-  justify-content: center;
-}
-.products-page-similar-items-card-img {
-  height: 100%;
-  width: 100%;
-}
-.products-page-similar-items-card-img img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-.product-page-similar-items-card-headline {
-  display: -webkit-box;
-  -webkit-line-clamp: 1;
-  -webkit-box-orient: vertical;
-  line-clamp: 1;
-  box-orient: vertical;
-  overflow: hidden;
-  font-size: 1.4rem;
-}
-.product-page-similar-items-card-price {
-  font-weight: 700;
-  text-transform: capitalize;
-}
 .product-page-wrapper-col2 {
-   background-color: var(--background-light);
+  background-color: var(--background-light);
   width: 25%;
   display: flex;
   flex-direction: column;
   position: sticky;
-   top: 100px;
+  top: 100px;
   /* right: 4rem; */
   height: 49rem;
 }
@@ -448,4 +414,13 @@
   background-color: var(--primary-color);
   cursor: pointer;
   text-transform: capitalize;
+}
+.product-page-loading-container, .product-page-error-container{
+  height: 85vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.product-page-error-container h3{
+  color: var(--primary-color);
 }
